# webcarto

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  webcarto.ini
data/: sample_links.html  urlhaus_database.txt
scripts/: report_builder.py
src/webcarto/: __init__.py  __main__.py  cli.py  crawler.py  html_utils.py  http_utils.py  io_utils.py  js_analyzer.py  metrics.py  privacy_check.py  report_builder.py  reputation.py  risk.py  transforms.py  urls_utils.py
